feat: setup outlines

--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
-<!-- 
+<!--
     Requirements:
     Your personal home page.
 
     This page shall contain:
 
-    Your name --real or fictitious (e.g., for FERPA reasons)
-    A photo of you --real or fictitious (e.g., for FERPA reasons)
-    A link to your resume
-    A link to your short biography
+    x Your name --real or fictitious (e.g., for FERPA reasons)
+    x A photo of you --real or fictitious (e.g., for FERPA reasons)
+    x A link to your resume
+    x A link to your short biography
  -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li class="nav-link__home"><a href="/index.html">Home</a></li>
+        <li class="nav-link__resume"><a href="/resume.html">Resume</a></li>
+        <li class="nav-link__bio"><a href="/bio.html">Biography</a></li>
+      </ul>
+    </nav>
+    <div class="name">
+      <p>Thomas Zhang</p>
+    </div>
+    <img src="./assets/profile.jpg" alt="The profile picture of Thomas Zhang" />
+  </body>
+</html>
