--- a/resume.html
+++ b/resume.html
@@ -1,13 +1,70 @@
-<!-- 
+<!--
     Requirements:
-    1. Full name or handle (if you are not comfortable with providing your identity). 
+    x 1. Full name or handle (if you are not comfortable with providing your identity).
     IMPORTANT: For privacy reasons, please do not list your addresses or telephone numbers.
-    2. Education
-    3. Relevant Coursework
-    4. Professional Experience. For each job, list accomplishments. 
-    Use the past-tense if you no longer work at the job; 
-    in the present-tense if you are currently employed at the job. 
+    x 2. Education
+    x 3. Relevant Coursework
+    x 4. Professional Experience. For each job, list accomplishments.
+    Use the past-tense if you no longer work at the job;
+    in the present-tense if you are currently employed at the job.
     Use bullets-points, an unordered list.
-    5. Skills (e.g., programming languages)
-    6. Activities that are related to your field of study or work
+    x 5. Skills (e.g., programming languages)
+    x 6. Activities that are related to your field of study or work
  -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/resume.css" />
+  </head>
+  <body>
+    <nav>
+        <ul>
+          <li class="nav-link__home"><a href="/index.html">Home</a></li>
+          <li class="nav-link__resume"><a href="/resume.html">Resume</a></li>
+          <li class="nav-link__bio"><a href="/bio.html">Biography</a></li>
+        </ul>
+      </nav>
+    <div class="profile">
+        <p>Thomas Zhang</p>
+    </div>
+    <div class="education">Education</div>
+    <div class="course-work">
+      <ul>
+        <li>course here</li>
+        <li>course here</li>
+        <li>course here</li>
+        <li>course here</li>
+        <li>course here</li>
+        <li>course here</li>
+      </ul>
+    </div>
+    <div class="experience">
+      <p>
+        Professional Experience. For each job, list accomplishments. Use the
+        past-tense if you no longer work at the job;
+        <ul>
+            <li>job 1</li>
+            <li>job 2</li>
+            <li>job 3</li>
+            <li>job 4</li>
+            <li>job 5</li>
+        </ul>
+      </p>
+    </div>
+    <div class="skills">
+        <p>
+            Skills (e.g., programming languages)
+        </p>
+    </div>
+    <div class="activities">
+        <p>
+            Activities that are related to your field of study or work
+        </p>
+    </div>
+  </body>
+</html>
