feat: added basic contents

--- a/resume.html
+++ b/resume.html
@@ -23,14 +23,14 @@
   </head>
   <body>
     <nav>
-        <ul>
-          <li class="nav-link__home"><a href="/index.html">Home</a></li>
-          <li class="nav-link__resume"><a href="/resume.html">Resume</a></li>
-          <li class="nav-link__bio"><a href="/bio.html">Biography</a></li>
-        </ul>
-      </nav>
+      <ul>
+        <li class="nav-link__home"><a href="/index.html">Home</a></li>
+        <li class="nav-link__resume"><a href="/resume.html">Resume</a></li>
+        <li class="nav-link__bio"><a href="/bio.html">Biography</a></li>
+      </ul>
+    </nav>
     <div class="profile">
-        <p>Thomas Zhang</p>
+      <p>Thomas Zhang</p>
     </div>
     <div class="education">Education</div>
     <div class="course-work">
@@ -47,24 +47,32 @@
       <p>
         Professional Experience. For each job, list accomplishments. Use the
         past-tense if you no longer work at the job;
-        <ul>
-            <li>job 1</li>
-            <li>job 2</li>
-            <li>job 3</li>
-            <li>job 4</li>
-            <li>job 5</li>
-        </ul>
       </p>
+      <ul>
+        <li>
+          EdTech Company January 2015 - Present, New York NY Senior Web
+          Developer Worked alongside product managers to re-architect a
+          multi-page web app into a single-page web app built in React resulting
+          in a yearly revenue lift of $1.1M Built the logic for a streamlined
+          ad-serving platform that scaled to our 100M users which improved the
+          page speed by 14% after implementation
+        </li>
+        <li>job 2</li>
+        <li>job 3</li>
+        <li>job 4</li>
+        <li>job 5</li>
+      </ul>
     </div>
     <div class="skills">
-        <p>
-            Skills (e.g., programming languages)
-        </p>
+      <p>Skills (e.g., programming languages)</p>
+      <div class="programming-languages">Programming languages</div>
+      <div class="frameworks">Frameworks</div>
+      <div class="database">Database</div>
+      <div class="cloud">Cloud infrastructure</div>
+      <div class="tools">Git</div>
     </div>
     <div class="activities">
-        <p>
-            Activities that are related to your field of study or work
-        </p>
+      <p>Activities that are related to your field of study or work</p>
     </div>
   </body>
 </html>
