feat: implemented homepage v1

--- a/index.html
+++ b/index.html
@@ -22,14 +22,38 @@
   <body>
     <nav>
       <ul>
-        <li class="nav-link__home"><a href="/index.html">Home</a></li>
+        <li class="nav-link__home"><a href="/index.html">About Me</a></li>
         <li class="nav-link__resume"><a href="/resume.html">Resume</a></li>
         <li class="nav-link__bio"><a href="/bio.html">Biography</a></li>
       </ul>
     </nav>
-    <div class="name">
-      <p>Thomas Zhang</p>
-    </div>
-    <img src="./assets/profile.jpg" alt="The profile picture of Thomas Zhang" />
+    <main>
+      <div class="quote">
+        <p>
+          Close your eyes and ask yourself. What are the colors of your soul?
+        </p>
+        <p>
+          I think the color depends on what you've been through in life and
+          what's important to you.
+        </p>
+        <p>
+          If I gave an answer, my colors would be a
+          <span class="yellow"> muted yellow, showing reserved optimism</span>,
+          a splash of <span class="grey">grey showing sadness</span>, and most
+          of all, a
+          <span class="red"
+            >glowing red, reflecting an intense desire to feel valuable and
+            alive</span
+          >.
+        </p>
+      </div>
+      <div class="profile">
+        <a class="name" href="./bio.html" >Thomas Zhang 張宇軒<a/>
+        <img
+          src="./assets/alaska.jpg"
+          alt="The profile picture of Thomas Zhang"
+        />
+      </div>
+    </main>
   </body>
 </html>
