--- a/resume.html
+++ b/resume.html
@@ -24,55 +24,408 @@
   <body>
     <nav>
       <ul>
-        <li class="nav-link__home"><a href="/index.html">Home</a></li>
+        <li class="nav-link__home"><a href="/index.html">About Me</a></li>
         <li class="nav-link__resume"><a href="/resume.html">Resume</a></li>
         <li class="nav-link__bio"><a href="/bio.html">Biography</a></li>
       </ul>
     </nav>
-    <div class="profile">
-      <p>Thomas Zhang</p>
-    </div>
-    <div class="education">Education</div>
-    <div class="course-work">
-      <ul>
-        <li>course here</li>
-        <li>course here</li>
-        <li>course here</li>
-        <li>course here</li>
-        <li>course here</li>
-        <li>course here</li>
-      </ul>
-    </div>
-    <div class="experience">
-      <p>
-        Professional Experience. For each job, list accomplishments. Use the
-        past-tense if you no longer work at the job;
-      </p>
-      <ul>
-        <li>
-          EdTech Company January 2015 - Present, New York NY Senior Web
-          Developer Worked alongside product managers to re-architect a
-          multi-page web app into a single-page web app built in React resulting
-          in a yearly revenue lift of $1.1M Built the logic for a streamlined
-          ad-serving platform that scaled to our 100M users which improved the
-          page speed by 14% after implementation
-        </li>
-        <li>job 2</li>
-        <li>job 3</li>
-        <li>job 4</li>
-        <li>job 5</li>
-      </ul>
-    </div>
-    <div class="skills">
-      <p>Skills (e.g., programming languages)</p>
-      <div class="programming-languages">Programming languages</div>
-      <div class="frameworks">Frameworks</div>
-      <div class="database">Database</div>
-      <div class="cloud">Cloud infrastructure</div>
-      <div class="tools">Git</div>
-    </div>
-    <div class="activities">
-      <p>Activities that are related to your field of study or work</p>
-    </div>
+
+    <main>
+      <div class="profile">
+        <h1>Thomas Zhang</h1>
+      </div>
+      <div class="education">
+        <h1>Education</h1>
+        <div class="school">
+          <div class="school__name">Tufts University</div>
+          <div class="school__location">Medford, MA</div>
+          <div class="school__range">2021 May</div>
+          <div class="school__program">Graduate Certificate</div>
+        </div>
+        <div class="school">
+          <div class="school__name">Interior Design Institute</div>
+          <div class="school__location">San Francisco, CA</div>
+          <div class="school__range">December 2022 - Current</div>
+          <div class="school__program"></div>
+        </div>
+        <div class="school">
+          <div class="school__name">Stanford University</div>
+          <div class="school__location">Stanford, CA</div>
+          <div class="school__range">September 2022 - Current</div>
+          <div class="school__program">Energy Innovation and Emerging Technologies Program</div>
+        </div>
+        <div class="school">
+          <div class="school__name">Harvard University</div>
+          <div class="school__range">2021 May</div>
+          <div class="school__program">Graduate Certificate</div>
+        </div>
+        <div class="school">
+          <div class="school__name">Stanford University</div>
+          <div class="school__range">2021 May</div>
+          <div class="school__program">Graduate Certificate</div>
+        </div>
+        <div class="school">
+          <div class="school__name">University of California Los Angeles</div>
+          <div class="school__range">2021 May</div>
+          <div class="school__program">Graduate Certificate</div>
+        </div>
+        <div class="school">
+          <div class="school__name">University of California San Diego</div>
+          <div class="school__range">2021 May</div>
+          <div class="school__program">Graduate Certificate</div>
+        </div>
+        <div class="school">
+          <div class="school__name">University of Virginia</div>
+          <div class="school__range">2021 May</div>
+          <div class="school__program">Graduate Certificate</div>
+        </div>
+        <div class="school">
+          <div class="school__name">Green River College</div>
+          <div class="school__range">2021 May</div>
+          <div class="school__program">Graduate Certificate</div>
+        </div>
+      </div>
+      <div class="course-work">
+        <h1>Relevant Coursework</h1>
+        <ul>
+          <li>Algorithm</li>
+          <li>Introduction to Security</li>
+          <li>Programming Languages</li>
+          <li>Artificial Intelligence: Principles and Techniques</li>
+          <li>Theory of Computation</li>
+          <li>Introduction to GIS</li>
+          <li>Interaction Design</li>
+          <li>Component & Design Technology</li>
+          <li>Immigration Law</li>
+          <li>Commerce Law</li>
+        </ul>
+      </div>
+      <div class="experience">
+        <h1>Professional Experience</h1>
+        <p>
+          For each job, list accomplishments. Use the past-tense if you no
+          longer work at the job;
+        </p>
+        <div class="job">
+          <div class="job__title">Freelancer Web Developer</div>
+          <div class="job__company"></div>
+          <div class="job__range">2021 - Present</div>
+          <div class="job__location">Remote</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">General Manager</div>
+          <div class="job__company">MusicalBasics Production</div>
+          <div class="job__range">2022 - Present</div>
+          <div class="job__location">Las Vegas, NV</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">Shopify Developer / Partner</div>
+          <div class="job__company"></div>
+          <div class="job__range">2022</div>
+          <div class="job__location">location</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">Co-Founder & CTO</div>
+          <div class="job__company">MierCat LLC</div>
+          <div class="job__range">2022</div>
+          <div class="job__location">Las Vegas, NV</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">MuYan Wellness</div>
+          <div class="job__company">Co-Founder</div>
+          <div class="job__range">2022</div>
+          <div class="job__location">Las Vegas, NV</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">Sales Consultant</div>
+          <div class="job__company">FJDynamics</div>
+          <div class="job__range">2022</div>
+          <div class="job__location">Las Vegas, NV</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">Sales Consultant</div>
+          <div class="job__company">FJDynamics</div>
+          <div class="job__range">2022</div>
+          <div class="job__location">Las Vegas, NV</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+
+        <div class="job">
+          <div class="job__title">Co-Founder, Product Lead</div>
+          <div class="job__company">reRoot</div>
+          <div class="job__range">Oct 2021 - May 2022</div>
+          <div class="job__location">Cambridge, MA</div>
+          <ul class="job__accomplishments">
+
+            reRoot makes migration easier for all.
+As social, economic, and climate landscapes change, individuals and families tend to move to where they can find a suitable community. Yet, moving is a huge risk that not many can afford to take, and not everyone is aware of what opportunities may even exist. Having access to digestible migration-related information is especially challenging for minority and immigrant communities. Meanwhile, there is a spatial mismatch between where services and organizations are located and where minority and immigrant communities reside.
+
+reRoot is a decision-making support platform that uses the US Census data to assist minority and disenfranchised communities within the United States to migrate and make more informed migration decisions outside of existing networks and word-of-mouth.
+
+Our team formed in 2021 as part of The Opportunity Project (at) Harvard, a data sprint hosted by the metaLAB (at) Harvard and the U.S. Census Bureau. We shared a common interest in developing a product to meet the present-day needs of under-served communities. Currently, we are the finalist team at the 2022 MIT IDEAS Social Innovation Challenge and aim to bring global impact.
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+
+            EdTech Company January 2015 - Present, New York NY Senior Web
+            Developer Worked alongside product managers to re-architect a
+            multi-page web app into a single-page web app built in React
+            resulting in a yearly revenue lift of $1.1M Built the logic for a
+            streamlined ad-serving platform that scaled to our 100M users which
+            improved the page speed by 14% after implementation
+
+
+        </div>
+
+        <div class="job">
+          <div class="job__title">CTO</div>
+          <div class="job__company">Vke Magazine</div>
+          <div class="job__range">2016 - 2017</div>
+          <div class="job__location">Charlottesville, VA</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">CTO</div>
+          <div class="job__company">Vke Magazine</div>
+          <div class="job__range">2016 - 2017</div>
+          <div class="job__location">Charlottesville, VA</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">CTO</div>
+          <div class="job__company">Vke Magazine</div>
+          <div class="job__range">2016 - 2017</div>
+          <div class="job__location">Charlottesville, VA</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">CTO</div>
+          <div class="job__company">Vke Magazine</div>
+          <div class="job__range">2016 - 2017</div>
+          <div class="job__location">Charlottesville, VA</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">Marketing & Operation Analyst</div>
+          <div class="job__company">ISIC China</div>
+          <div class="job__range">2015</div>
+          <div class="job__location">Shanghai, China</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">Independent Contractor</div>
+          <div class="job__company">Shanghai, China</div>
+          <div class="job__range">2007 - 2011</div>
+          <div class="job__location">Shanghai, China</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">Independent E-Commerce Owner</div>
+          <div class="job__company">Self-Employed</div>
+          <div class="job__range">2007 - 2011</div>
+          <div class="job__location">Shanghai, China</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="job__title">Regional Distributor</div>
+          <div class="job__company">Moonbasa</div>
+          <div class="job__range">2009 - 2011</div>
+          <div class="job__location">Shanghai, China</div>
+          <ul class="job__accomplishments">
+            <li>what did I do</li>
+            <li>what did I do</li>
+          </ul>
+        </div>
+
+      </div>
+
+
+
+
+      <div class="skills">
+        <h1>Skills</h1>
+        <div class="programming-languages">
+          <h2>Programming languages</h2>
+          <ul class="skill">
+            <li>
+              <span class="skill__bar javascript"></span>
+              <p class="skill__text">JavaScript</p>
+            </li>
+            <li>
+              <span class="skill__bar typescript"></span>
+              <p class="skill__text">TypeScript</p>
+            </li>
+            <li>
+              <span class="skill__bar python"></span>
+              <p class="skill__text">Python</p>
+            </li>
+            <li>
+              <span class="skill__bar java"></span>
+              <p class="skill__text">Java</p>
+            </li>
+            <li>
+              <span class="skill__bar php"></span>
+              <p class="skill__text">PHP</p>
+            </li>
+            <li>
+              <span class="skill__bar c"></span>
+              <p class="skill__text">C</p>
+            </li>
+            <li>
+              <span class="skill__bar cpp"></span>
+              <p class="skill__text">C++</p>
+            </li>
+            <li>
+              <span class="skill__bar csharp"></span>
+              <p class="skill__text">C#</p>
+            </li>
+            <li>
+              <span class="skill__bar ruby"></span>
+              <p class="skill__text">Ruby</p>
+            </li>
+            <li>
+              <span class="skill__bar go"></span>
+              <p class="skill__text">Go</p>
+            </li>
+            <li>
+              <span class="skill__bar kotlin"></span>
+              <p class="skill__text">Kotlin</p>
+            </li>
+            <li>
+              <span class="skill__bar swift"></span>
+              <p class="skill__text">Swift</p>
+            </li>
+            <li>
+              <span class="skill__bar matlab"></span>
+              <p class="skill__text">MATLAB</p>
+            </li>
+            <li>
+              <span class="skill__bar r"></span>
+              <p class="skill__text">R</p>
+            </li>
+            <li>
+              <span class="skill__bar haskell"></span>
+              <p class="skill__text">Haskell</p>
+            </li>
+            <li>
+              <span class="skill__bar scala"></span>
+              <p class="skill__text">Scala</p>
+            </li>
+            <li>
+              <span class="skill__bar lisp"></span>
+              <p class="skill__text">Lisp</p>
+            </li>
+            <li>
+              <span class="skill__bar sql"></span>
+              <p class="skill__text">SQL</p>
+            </li>
+            <li>
+              <span class="skill__bar lua"></span>
+              <p class="skill__text">Lua</p>
+            </li>
+            <li>
+              <span class="skill__bar julia"></span>
+              <p class="skill__text">Julia</p>
+            </li>
+            <li>
+              <span class="skill__bar bracket"></span>
+              <p class="skill__text">Bracket</p>
+            </li>
+          </ul>
+        </div>
+        <div class="frameworks">
+          <h2>Frameworks and Tools</h2>
+          <ul class="cloud" role="navigation" aria-label="Word Cloud">
+            <li data-weight="7">React</li>
+            <li data-weight="9">NextJS</li>
+            <li data-weight="4">AngularJS</li>
+            <li data-weight="3">VueJS</li>
+            <li data-weight="7">jQuery</li>
+            <li data-weight="7">Ruby on Rails</li>
+            <li data-weight="8">Django</li>
+            <li data-weight="6">GraphQL</li>
+            <li data-weight="5">MongoDB</li>
+            <li data-weight="5">HTML5</li>
+            <li data-weight="2">MeteorJS</li>
+            <li data-weight="6">Phaser</li>
+            <li data-weight="9">WordPress</li>
+            <li data-weight="9">Shopify</li>
+            <li data-weight="5">D3.js</li>
+            <li data-weight="3">Chart.js</li>
+            <li data-weight="7">CSS3</li>
+            <li data-weight="2">Tailwind</li>
+            <li data-weight="4">Sass</li>
+            <li data-weight="5">React Native</li>
+            <li data-weight="8">Android</li>
+            <li data-weight="3">iOS</li>
+          </ul>
+        </div>
+      </div>
+      <div class="activities">
+        <h1>Activities</h1>
+        <ul>
+          <li>Multicultural Cooking</li>
+          <li>Contemporary Architecture</li>
+          <li>Traveling</li>
+          <li>Camping</li>
+          <li>Snorkeling</li>
+          <li>Photography (Nature & Architectural)</li>
+          <li>XR</li>
+          <li>Tennis</li>
+          <li>Table Tennis</li>
+          <li>Chess</li>
+          <li>Spicy Food</li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
